# agents

./: README.md
linear-assistant/: Makefile  app.py  linear.py  pyproject.toml
linear-assistant/baml_src/: linear.baml
